--- a/lab1/index.html
+++ b/lab1/index.html
@@ -4,8 +4,158 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <link rel="stylesheet" href="style.css">
+        <title>McDonalds</title>
     </head>
 
-    <body></body>
+    <body style="background-color: #fffff9;">
+        <header>
+            <h1 class="header">McDonalds</h1>
+            <image src="https://nowymarketing.pl/i/articles/31041_original.jpg" alt="McDonalds" id="imgheader"></image>
+        </header>
+        <hr>
+        <section>
+            <div class="card">
+                <img src="https://mcdonalds.ru/resize/-x1020/upload/iblock/dfa/0000_BigMac_BB_1500x1500-_4_-_1_.png" width="200px" alt="Биг Мак">
+                <h2>Биг Мак</h2>
+                <h3>Ингредиенты</h3>
+                <p>
+                    Бифштексы из говядины рубленые, приготовленные на гриле<br>
+                    Булочка с кунжутом Биг Мак, поджаренная в тостере<br>
+                    Лук репчатый резаный восстановленный<br>
+                    Огурцы маринованные резанные<br>
+                    Плавленый сыр Чеддер<br>
+                    Приправа для гриля<br>
+                    Салат "Айсберг мелкой нарезки"<br>
+                    Соус на основе растительных масел Биг-Мак<br>
+                </p>
+            </div>
+            <div class="card">
+                <img src="https://mcdonalds.ru/resize/500x500//upload/iblock/4bb/2004_BigTasty_1500x1500_min.png" width="200px" alt="Биг Тейсти">
+                <h2>Биг Тейсти</h2>
+                <h3>Ингредиенты</h3>
+                <p>
+                    Бифштекс из говядины рубленый<br>
+                    Булочка для гамбургеров из пшеничной муки с кунжутом<br>
+                    Лук репчатый свежий резаный<br>
+                    Плавленый сыр со вкусом Эмменталь<br>
+                    Помидор свежий резаный<br>
+                    Приправа для гриля<br>
+                    Салат "Айсберг крупной нарезки"<br>
+                    Соус на основе растительных масел Биг Тейсти<br>
+                </p>
+            </div>
+            <div class="card">
+                <img src="https://mcdonalds.ru/resize/500x500//upload/iblock/ef5/2086_Ceasar_Roll_new_1500x1500_min.png" width="200px" alt="Цезарь ролл">
+                <h2>Цезарь ролл</h2>
+                <h3>Ингредиенты</h3>
+                <p>
+                    Лепешка для сэндвичей<br>
+                    Масло растительное – смесь<br>
+                    Полуфабрикаты из мяса птицы замороженные: Стрипсы<br>
+                    Помидор свежий резаный<br>
+                    Салат "Айсберг мелкой нарезки"<br>
+                    Соус на основе растительных масел МакЧикен<br>
+                    Сыр тертый<br>
+                </p>
+            </div>
+            <div class="card">
+                <img src="https://mcdonalds.ru/resize/500x500//upload/iblock/5a0/0000_BT_roll_1500x1500-_3_-_1_.png" width="200px" alt="Биг Тейсти Ролл">
+                <h2>Биг Тейсти Ролл</h2>
+                <h3>Ингредиенты</h3>
+                <p>
+                    Бифштекс из говядины рубленый<br>
+                    Лепешка для сэндвичей, пропаренная<br>
+                    Лук репчатый свежий резаный<br>
+                    Плавленый сыр со вкусом Эмменталь<br>
+                    Помидор свежий резаный<br>
+                    Приправа для гриля<br>
+                    Салат "Айсберг мелкой нарезки"<br>
+                    Соус на основе растительных масел Биг Тейсти<br>
+                </p>
+            </div>
+            <div class="card">
+                <img src="https://mcdonalds.ru/resize/500x500//upload/iblock/9de/6011_Salad_Caesar_1500x1500_min.png" width="200px" alt="Салат Цезарь">
+                <h2>Салат Цезарь</h2>
+                <h3>Ингредиенты</h3>
+                <p>
+                    Полуфабрикаты из мяса птицы замороженные «Стрипсы формованные»<br>
+                    Салат "Айсберг крупной нарезки"<br>
+                    Сыр тертый<br>
+                    Томаты Черри<br>
+                </p>
+            </div>
+        </section>
+        <hr>
+        <section>
+            <table width="495px">
+                <thead>
+                    <tr>
+                        <th>Название</th>
+                        <th>Время готовки</th>
+                        <th>Стоимость</th>
+                        <th>Энерг. ценность</th>
+                    </tr>
+                </thead>
+                <tbody align="center">
+                    <tr>
+                        <td>Биг Мак</td>
+                        <td>7 минут</td>
+                        <td>140 рублей</td>
+                        <td>522 Ккал</td>
+                    </tr>
+                    <tr>
+                        <td>Биг Тейсти</td>
+                        <td>8 минут</td>
+                        <td>249 рублей</td>
+                        <td>800 Ккал</td>
+                    </tr>
+                    <tr>
+                        <td>Цезарь ролл</td>
+                        <td>9 минут</td>
+                        <td>179 рублей</td>
+                        <td>472 Ккал</td>
+                    </tr>
+                    <tr>
+                        <td>Биг Тейсти Ролл</td>
+                        <td>12 минут</td>
+                        <td>184 рубля</td>
+                        <td>521 Ккал</td>
+                    </tr>
+                    <tr>
+                        <td>Салат Цезарь</td>
+                        <td>10 минут</td>
+                        <td>179 рублей</td>
+                        <td>231 Ккал</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section>
+            <form>
+                <label for="firstname">Имя</label><br>
+                <input type="text" id="firstname" name="firstname" placeholder="Введите имя"><br>
+                <label for="lastname">Фамилия</label><br>
+                <input type="text" id="lastname" name="lastname" placeholder="Введите фамилию"><br>
+                <label for="number">Номер телефона</label><br>
+                <input type="number" id="number" name="number"
+                placeholder="Введите номер телефона" class="number">
+                <label for="order"></label><br>
+                <select>
+                    <option disabled selected></option>
+                    <option>Биг Мак</option>
+                    <option>Биг Тейсти</option>
+                    <option>Цезарь Ролл</option>
+                    <option>Биг Тейсти Ролл</option>
+                    <option>Салат Цезарь</option>
+                </select>
+                <button>Заказать</button>
+            </form>
+        </section>
+        <section>
+            <div>
+                <p class="created">created by <sup>*</sup><b style="color: rgb(250, 250, 170); text-shadow: 1px 1px 0 black;"><sub>douevenfeel</sub></b></p>
+            </div>
+        </section>
+    </body>
 </html>
