--- a/lab6/index.html
+++ b/lab6/index.html
@@ -4,7 +4,56 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Lab6</title>
+        <title>Document</title>
+
+        <link rel="stylesheet" href="reset.css" />
+        <link rel="stylesheet" href="style.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
     </head>
-    <body></body>
+    <body>
+        <div class="main">
+            <div class="block">
+                <div id="first-task">click</div>
+                <div id="second-task">0</div>
+            </div>
+            <div id="third-task">
+                <div id="button">Lorem ipsum dolor sit.</div>
+                <ul id="list" class="hidden">
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                    <il class="item">Lorem ipsum dolor sit amet consectetur.</il>
+                    <br />
+                </ul>
+            </div>
+            <div id="fourth-task">
+                <div id="circle"></div>
+            </div>
+        </div>
+    </body>
+    <script src="script.js"></script>
 </html>
