--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,12 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lab2</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Figma</title>
+        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/styles.css" />
+        <link rel="stylesheet" href="css/media.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <header>
+            <nav>
+                <img src="image/logo.png" alt="logo" class="logo" />
+                <div class="menu">
+                    <a href="">Home</a>
+                    <a href="">Product</a>
+                    <a href="">About</a>
+                    <a href="">Contact</a>
+                </div>
+                <button class="sign-up">Sign Up</button>
+                <img src="image/menu.png" alt="menu" class="hidden-menu" />
+            </nav>
+            <section class="section-header">
+                <article class="text">
+                    <h1>Find the Best Solution in Seconds</h1>
+                    <h2>If debugging is the process of removing software bugs.</h2>
+                </article>
+                <div class="buttons">
+                    <button class="get-started">get started</button>
+                    <button class="try-for-free">try for free</button>
+                </div>
+                <img src="image/dashboard.png" alt="dashboard" class="dashboard" />
+            </section>
+        </header>
+        <main>
+            <section class="main-first">
+                <div class="first-text">
+                    <h2>FigmaLand was Built Specifically for You</h2>
+                </div>
+                <article class="cards">
+                    <div class="card-1">
+                        <img src="image/card-1.png" alt="vector" />
+                        <h2>Management</h2>
+                        <p>
+                            Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year.
+                        </p>
+                        <a href="">Learn More</a>
+                    </div>
+                    <div class="card-2">
+                        <img src="image/card-2.png" alt="vector" />
+                        <h2>Customer Support</h2>
+                        <p>
+                            Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year.
+                        </p>
+                        <a href="">Learn More</a>
+                    </div>
+                    <div class="card-3">
+                        <img src="image/card-3.png" alt="vector" />
+                        <h2>Collaborative</h2>
+                        <p>
+                            Slate helps you see how many more days you need to work to reach your financial goal for the
+                            month and year.
+                        </p>
+                        <a href="">Learn More</a>
+                    </div>
+                </article>
+            </section>
+            <section class="main-second">
+                <article class="article-second">
+                    <div class="second-text">
+                        <h2>Quick & Easy Process</h2>
+                        <h3>
+                            Most calendars are designed for teams. Slate is designed for freelancers who want a simple
+                            way to plan their schedule.
+                        </h3>
+                        <div class="buttons">
+                            <button class="sign-up-for-free">sign up for free</button>
+                            <button class="find-out-more">find out more</button>
+                        </div>
+                    </div>
+                    <img src="image/main-second.png" alt="main-second" />
+                </article>
+            </section>
+            <section class="main-third">
+                <article class="article-third">
+                    <img src="image/main-third.png" alt="main-third" />
+                    <div class="third-text">
+                        <h2>Perfect for Operations HR and Finance</h2>
+                        <h3>
+                            Most calendars are designed for teams. Slate is designed for freelancers who want a simple
+                            way to plan their schedule.
+                        </h3>
+                        <button class="button">Button</button>
+                    </div>
+                </article>
+            </section>
+            <section class="main-fourth">
+                <article class="article-fourth">
+                    <div class="fourth-text">
+                        <h2>Perfect solution for small businesse</h2>
+                        <h3>
+                            Being a freelancer is a rollercoaster of emotions. We built Slate to keep your freelance
+                            business less stressful. We'd love to show you what we're building...
+                        </h3>
+                        <div class="buttons">
+                            <button class="sign-up-for-free">sign up for free</button>
+                            <button class="find-out-more">find out more</button>
+                        </div>
+                    </div>
+                    <img src="image/main-fourth.png" alt="main-fourth" />
+                </article>
+            </section>
+            <section class="main-fifth">
+                <div class="fifth-text">
+                    <h2>Simple Pricing for Your Team</h2>
+                    <p>Slate helps you see how many more days you need</p>
+                </div>
+                <article class="cards">
+                    <div class="card">
+                        <div class="heading">
+                            <h2>Education</h2>
+                            <p>Brief price Description</p>
+                        </div>
+                        <img src="image/fifth-card-1.png" alt="Education" />
+                        <div class="row">
+                            <p>0</p>
+                            <div class="block">
+                                <span>$</span>
+                                <p>Per/ month</p>
+                            </div>
+                        </div>
+                        <div class="list">
+                            <p>Only 2 Operators</p>
+                            <p>Abandoned Card</p>
+                            <p>Facebook & Instagram Ads</p>
+                            <p>Order Notifications</p>
+                            <p>Landing Pages</p>
+                        </div>
+                        <button class="order-now">Order Now</button>
+                    </div>
+                    <div class="card" id="center-card">
+                        <div class="heading">
+                            <h2>Professional</h2>
+                            <p>Brief price Description</p>
+                        </div>
+                        <img src="image/fifth-card-2.png" alt="Professional" />
+                        <div class="row">
+                            <p>10</p>
+                            <div class="block">
+                                <span>$</span>
+                                <p>Per/ month</p>
+                            </div>
+                        </div>
+                        <div class="list">
+                            <p>Only 2 Operators</p>
+                            <p>Abandoned Card</p>
+                            <p>Facebook & Instagram Ads</p>
+                            <p>Order Notifications</p>
+                            <p>Landing Pages</p>
+                        </div>
+                        <button class="order-now">Order Now</button>
+                    </div>
+                    <div class="card">
+                        <div class="heading">
+                            <h2>Business</h2>
+                            <p>Brief price Description</p>
+                        </div>
+                        <img src="image/fifth-card-3.png" alt="Business" />
+                        <div class="row">
+                            <p>99</p>
+                            <div class="block">
+                                <span>$</span>
+                                <p>Per/ month</p>
+                            </div>
+                        </div>
+                        <div class="list">
+                            <p>Only 2 Operators</p>
+                            <p>Abandoned Card</p>
+                            <p>Facebook & Instagram Ads</p>
+                            <p>Order Notifications</p>
+                            <p>Landing Pages</p>
+                        </div>
+                        <button class="order-now">Order Now</button>
+                    </div>
+                </article>
+            </section>
+            <hr />
+            <section class="main-sixth">
+                <article class="sixth-content">
+                    <div class="sixth-text">
+                        <h2>SUBSCRIBE</h2>
+                        <p>Subscribe to get exclusive news & offer</p>
+                    </div>
+                    <div class="mailing-input">
+                        <form action="">
+                            <input type="email" name="email" id="email" placeholder="Enter Your Adress Email" />
+                        </form>
+                        <button class="subscribe">SUBSCRIBE</button>
+                    </div>
+                </article>
+            </section>
+        </main>
+        <footer>
+            <section class="footer-content">
+                <div class="footer-column">
+                    <div class="row">
+                        <div class="row-1">
+                            <a href="">Price Item One</a>
+                            <a href="">Price Item Two</a>
+                            <a href="">Price Item Three</a>
+                        </div>
+                        <div class="row-2">
+                            <a href="">Price Item One</a>
+                            <a href="">Price Item Two</a>
+                            <a href="">Price Item Three</a>
+                        </div>
+                    </div>
+                    <p>Just type what's on your mind</p>
+                </div>
+                <img src="image/footer-map.png" alt="map" />
+                <div class="footer-row">
+                    <div class="block">
+                        <div class="geo">
+                            <img src="image/geo-1.png" alt="geo" class="geo-1" />
+                            <img src="image/geo-2.png" alt="geo" class="geo-2" />
+                        </div>
+                        <address>7480 Mockingbird Hill undefined</address>
+                    </div>
+                    <div class="block">
+                        <img src="image/footer-phone.png" alt="phone" class="phone" />
+                        <address>(239) 555-0108</address>
+                    </div>
+                    <div class="social">
+                        <img src="image/twitter.png" alt="twitter" />
+                        <img src="image/facebook.png" alt="facebook" />
+                        <img src="image/instagram.png" alt="instagram" />
+                    </div>
+                </div>
+            </section>
+        </footer>
+    </body>
 </html>
